updated the divvy locus function to allow for proper weighting AND unscaling loci

--- a/method_A/01.2_divvy-PPA.Rmd
+++ b/method_A/01.2_divvy-PPA.Rmd
@@ -19,7 +19,9 @@ library("tidyverse")
 library("data.table")
 library("Homo.sapiens")
 
-serv.dir <- "/Users/jtorres/FUSE5/"
+#fuse.path <- "/Users/jtorres/"
+fuse.path <- "/home/jason/science/servers/"
+serv.dir <- fuse.path %&% "FUSE5/"
 proj.dir <- serv.dir %&% "projects/t2d_classification/"
 work.dir <- proj.dir %&% "method_A/"
 out.dir <- work.dir %&% "analysis_files/"
@@ -33,22 +35,12 @@ sym.df <- select(Homo.sapiens,key=sym.ids,keytype="SYMBOL",
 ess.dir <- proj.dir %&% "analysis_files/"
 ess.df <- fread(ess.dir %&% "expression_specificity_scores.txt")
 
-weight.df <- fread(out.dir %&% "weight-enrich.txt")
-
 ```
 
 Get weight vector 
 
 
 ```{r}
-
-weight.df <- fread(out.dir %&% "weight-enrich.txt")
-weight.vec <- c(filter(weight.df,annotation=="coding")$weight,
-                filter(weight.df,annotation=="strong.enhancers")$weight,
-                filter(weight.df,annotation=="weak.enhancers")$weight,
-                filter(weight.df,annotation=="gene.transcription")$weight,
-                filter(weight.df,annotation=="promoters")$weight,
-                filter(weight.df,annotation=="genic.enhancer")$weight)
 
 weight.all.df <- fread(out.dir %&% "weight-enrich-all.txt")
 
@@ -132,7 +124,7 @@ handle_annotation <- function(annot.df, annot.name, ppa){
 
 
 divvy_ppa_snp <- function(loc.id,snp.id,mode="full",weights=TRUE){
-  # set weights=NULL if unweighted, else assign weight.vector 
+  # set weights=NULL if unweighted
   sub.df <- filter(fcred.df,Locus.ID==loc.id,SNPID==snp.id)
   chrom <- sub.df$CHR; pos <- sub.df$POS; 
   ppa <- sub.df$PPA; coding <- sub.df$coding
@@ -149,33 +141,33 @@ divvy_ppa_snp <- function(loc.id,snp.id,mode="full",weights=TRUE){
   genenh.vec <- handle_annotation(annot.df,"genic_enhancer",ppa)
   if (weights==TRUE){
     c.df <- filter(weight.all.df,annotation=="coding")
-    c.scores <- c(filter(c.df,tissue=="islet")$weight,filter(c.df,tissue=="muscle")$weight,
-                                  filter(c.df,tissue=="adipose")$weight,filter(c.df,tissue=="liver")$weight)
+    c.scores <- c(filter(c.df,tissue=="islet")$weight, filter(c.df,tissue=="muscle")$weight,
+                  filter(c.df,tissue=="adipose")$weight,filter(c.df,tissue=="liver")$weight)
     coding.vec <- coding.vec  * c.scores 
     
     se.df <- filter(weight.all.df,annotation=="strong.enhancers")
-    se.scores <- c(filter(se.df,tissue=="islet")$weight,filter(se.df,tissue=="muscle")$weight,
-                                  filter(se.df,tissue=="adipose")$weight,filter(se.df,tissue=="liver")$weight)    
+    se.scores <- c(filter(se.df,tissue=="islet")$weight, filter(se.df,tissue=="muscle")$weight, 
+                   filter(se.df,tissue=="adipose")$weight,filter(se.df,tissue=="liver")$weight)    
     strongenh.vec <- strongenh.vec * se.scores
 
     we.df <- filter(weight.all.df,annotation=="weak.enhancers")
-    we.scores <- c(filter(we.df,tissue=="islet")$weight,filter(we.df,tissue=="muscle")$weight,
-                                  filter(we.df,tissue=="adipose")$weight,filter(we.df,tissue=="liver")$weight)        
+    we.scores <- c(filter(we.df,tissue=="islet")$weight, filter(we.df,tissue=="muscle")$weight, 
+                   filter(we.df,tissue=="adipose")$weight,filter(we.df,tissue=="liver")$weight)        
     weakenh.vec <- weakenh.vec * we.scores
     
     gt.df <- filter(weight.all.df,annotation=="gene.transcription")
-    gt.scores <- c(filter(gt.df,tissue=="islet")$weight,filter(gt.df,tissue=="muscle")$weight,
-                                  filter(gt.df,tissue=="adipose")$weight,filter(gt.df,tissue=="liver")$weight) 
+    gt.scores <- c(filter(gt.df,tissue=="islet")$weight, filter(gt.df,tissue=="muscle")$weight, 
+                   filter(gt.df,tissue=="adipose")$weight,filter(gt.df,tissue=="liver")$weight) 
     genetrans.vec <- genetrans.vec * gt.scores
     
     pr.df <- filter(weight.all.df,annotation=="promoters")
-    pr.scores <- c(filter(pr.df,tissue=="islet")$weight,filter(pr.df,tissue=="muscle")$weight,
-                                  filter(pr.df,tissue=="adipose")$weight,filter(pr.df,tissue=="liver")$weight)    
+    pr.scores <- c(filter(pr.df,tissue=="islet")$weight, filter(pr.df,tissue=="muscle")$weight, 
+                   filter(pr.df,tissue=="adipose")$weight, filter(pr.df,tissue=="liver")$weight)    
     prom.vec <- prom.vec * pr.scores 
 
     ge.df <- filter(weight.all.df,annotation=="genic.enhancer")
     ge.scores <- c(filter(ge.df,tissue=="islet")$weight,filter(ge.df,tissue=="muscle")$weight,
-                                  filter(ge.df,tissue=="adipose")$weight,filter(ge.df,tissue=="liver")$weight)    
+                   filter(ge.df,tissue=="adipose")$weight,filter(ge.df,tissue=="liver")$weight)    
     genenh.vec <- genenh.vec * ge.scores 
   }
   if (mode=="full"){
@@ -196,7 +188,7 @@ divvy_ppa_snp <- function(loc.id,snp.id,mode="full",weights=TRUE){
   return(out.df)
 }
 
-divvy_ppa_loc <- function(loc.id,mode="full",weights=TRUE){
+divvy_ppa_loc <- function(loc.id,mode="full",weights=TRUE,scaled=FALSE){
   sub.df <- filter(fcred.df,Locus.ID==loc.id)
   out.df <- c()
   pb <- txtProgressBar(min=0,max=dim(sub.df)[1],style=3)
@@ -214,14 +206,16 @@ divvy_ppa_loc <- function(loc.id,mode="full",weights=TRUE){
   other <- ifelse((cumppa-sum(vec))<=1&(cumppa-sum(vec))>=0,cumppa-sum(vec),0)
   vec <- c(vec,other)
   names(vec)[length(vec)] <- "other"
-  # Scale ppa's to add up to 1 
-  vec <- vec/sum(vec)
+  if (scaled==TRUE){
+    # Scale ppa's to add up to 1 
+    vec <- vec/sum(vec)    
+  }
   out.df <- as.data.frame(t(vec))
   out.df <- data.frame(Locus.ID=loc.id,out.df)
   return(out.df)
 }
 
-build_ppa_partition_df <- function(mode="full",weights=TRUE){
+build_ppa_partition_df <- function(mode="full",weights=TRUE,scaled=FALSE){
   loc.ids <- fcred.df$Locus.ID %>% unique(.)
   out.df <- c()
   pb <- txtProgressBar(min=0,max=length(loc.ids),style=3)
@@ -229,7 +223,7 @@ build_ppa_partition_df <- function(mode="full",weights=TRUE){
     setTxtProgressBar(pb,i)
     loc.id <- loc.ids[i]
     print(loc.id)
-    build.df <- divvy_ppa_loc(loc.id,mode,weights)
+    build.df <- divvy_ppa_loc(loc.id,mode,weights,scaled)
     out.df <- rbind(out.df,build.df)
   }
   return(out.df)
@@ -242,13 +236,18 @@ Generate and save tables
 ```{r}
 
 part.full.df <- build_ppa_partition_df(mode="full")
-part.fullW.df <- build_ppa_partition_df(mode="full",weight.vec)
-part.cse.df <- build_ppa_partition_df(mode="coding+strongenhancers")
+part.fullWS.df <- build_ppa_partition_df(mode="full",weights=TRUE,scaled=TRUE)
+part.fullWU.df <- build_ppa_partition_df(mode="full",weights=TRUE,scaled=FALSE)
+#part.cse.df <- build_ppa_partition_df(mode="coding+strongenhancers")
 
-write.table(x=part.full.df,file=out.dir%&%"tissue_ppa_divvy-full.txt",sep="\t",quote=FALSE,row.names=FALSE)
-write.table(x=part.fullW.df,file=out.dir%&%"tissue_ppa_divvy-fullWeighted.txt",sep="\t",quote=FALSE,row.names=FALSE)
-write.table(x=part.cse.df,file=out.dir%&%"tissue_ppa_divvy-coding-strongEnhancers.txt",
+write.table(x=part.full.df,file=out.dir%&%"tissue_ppa_divvy-full.txt",sep="\t",
+            quote=FALSE,row.names=FALSE)
+write.table(x=part.fullWS.df,file=out.dir%&%"tissue_ppa_divvy-full-weighted-scaled.txt",
             sep="\t",quote=FALSE,row.names=FALSE)
+write.table(x=part.fullWU.df,file=out.dir%&%"tissue_ppa_divvy-full-weighted-unscaled.txt",
+            sep="\t",quote=FALSE,row.names=FALSE)
+#write.table(x=part.cse.df,file=out.dir%&%"tissue_ppa_divvy-coding-strongEnhancers.txt",
+#            sep="\t",quote=FALSE,row.names=FALSE)
 
 ```
 
