--- a/method_C/02.1_evaluate-divvy-ppa-methods.Rmd
+++ b/method_C/02.1_evaluate-divvy-ppa-methods.Rmd
@@ -39,9 +39,11 @@ fcred.df <- fread(methA.dir %&% "null_results/null_results_func-cred-sets.txt")
 keep.df <- fread(proj.dir %&% "input_data/" %&% "380.locus.ID.txt")
 keep.vec <- keep.df$Locus.ID_inCREDS
 
-full.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingRN.txt") %>% 
+full.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingNotRN.txt") %>% 
   filter(.,Locus.ID %in% keep.vec)
-wfull.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingRN.txt") %>% filter(.,Locus.ID %in% keep.vec)
+wfull.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingNotRN.txt") %>% filter(.,Locus.ID %in% keep.vec)
+alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") %>% 
+  filter(.,Locus.ID %in% keep.vec)  
 
 ```
 
@@ -52,7 +54,8 @@ wfull.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-Codi
 
 create_plot_df <- function(){
   df <- rbind(mutate(full.df,method="full"),
-              mutate(wfull.df,method="weighted.full"))
+              mutate(wfull.df,method="weighted.full"),
+              mutate(alt.df,method="alternative"))
   loc.ids <- df$Locus.ID %>% unique(.)
   out.df <- c()
   pb <- txtProgressBar(min=0,max=length(loc.ids),style=3)
@@ -62,11 +65,13 @@ create_plot_df <- function(){
     sub.df <- filter(df,Locus.ID==loc.id)
     ppa.score.full <- sub.df[1,2:6] %>% as.numeric(.)
     ppa.score.wfull <- sub.df[2,2:6] %>% as.numeric(.)
+    ppa.score.alt <- sub.df[3,2:6] %>% as.numeric(.)
 
     tissue <- names(sub.df)[2:6]
     build.df <- data.frame(Locus.ID=loc.id,tissue,
                            ppa.score.full,
-                           ppa.score.wfull)
+                           ppa.score.wfull,
+                           ppa.score.alt)
     out.df <- rbind(out.df,build.df)
   }
   out.df$Locus.ID <- out.df$Locus.ID %>% as.character(.)
@@ -85,7 +90,7 @@ Make PPA comparison plot
 plot.df <- create_plot_df()
 
 
-pltB <- ggplot(data=plot.df,aes(x=ppa.score.full,y=ppa.score.wfull)) + 
+pltA <- ggplot(data=plot.df,aes(x=ppa.score.full,y=ppa.score.wfull)) + 
   geom_point(shape=21,color="black",aes(fill=tissue)) + 
   geom_abline(slope=1,intercept=0,linetype=1,alpha=0.8) +
   facet_wrap(~tissue,nrow=3) + 
@@ -95,8 +100,22 @@ pltB <- ggplot(data=plot.df,aes(x=ppa.score.full,y=ppa.score.wfull)) +
   xlab('ppa score (unweighted)') + 
   ylab('ppa score (weighted)') + 
   ggtitle("Comparison of PPA Scores")
-ggsave(plot=pltB,filename=plot.dir%&%"ppa-score-compare-weighted.png",
+ggsave(plot=pltA,filename=plot.dir%&%"ppa-score-compare-weighted.png",
        height = 6,width=6)
+
+pltB <- ggplot(data=plot.df,aes(x=ppa.score.full,y=ppa.score.alt)) + 
+  geom_point(shape=21,color="black",aes(fill=tissue)) + 
+  geom_abline(slope=1,intercept=0,linetype=1,alpha=0.8) +
+  facet_wrap(~tissue,nrow=3) + 
+  theme_classic() + 
+  scale_fill_brewer(palette="Set3") + 
+  theme(legend.position = "none") + 
+  xlab('ppa score (unweighted)') + 
+  ylab('tissue score (alternative)') + 
+  ggtitle("Comparison of Scores")
+ggsave(plot=pltB,filename=plot.dir%&%"ppa-score-compare-alternative.png",
+       height = 6,width=6)
+
 
 plot.df <- mutate(plot.df,ppa.score.diff=(ppa.score.wfull-ppa.score.full))
 
