--- a/method_C/02.3_horizontal-stacked-barplots.Rmd
+++ b/method_C/02.3_horizontal-stacked-barplots.Rmd
@@ -40,11 +40,12 @@ fcred.df <- fread(methA.dir %&%"null_results/null_results_func-cred-sets.txt")
 keep.df <- fread(proj.dir %&% "input_data/" %&% "380.locus.ID.txt")
 keep.vec <- keep.df$Locus.ID_inCREDS
 
-weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingRN.txt") %>% 
+weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingNotRN.txt") %>% 
   filter(.,Locus.ID %in% keep.vec)
-unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingRN.txt") %>% 
+unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingNotRN.txt") %>% 
   filter(.,Locus.ID %in% keep.vec)
-
+alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") %>% 
+  filter(.,Locus.ID %in% keep.vec)  
 
 ```
 
@@ -153,6 +154,9 @@ ggsave(plot=grob1,filename=plot.dir%&%"stacked_barplots_full-weighted.png",width
 
 grob2 <- all_tissues_plot(unweighted.df,number=50)
 ggsave(plot=grob2,filename=plot.dir%&%"stacked_barplots_full-unweighted.png",width=25,height=15)
+
+grob3 <- all_tissues_plot(alt.df,number=50)
+ggsave(plot=grob3,filename=plot.dir%&%"stacked_barplots_alternative.png",width=25,height=15)
 
 ```
 
