--- a/method_C/03.0_classify-loci.Rmd
+++ b/method_C/03.0_classify-loci.Rmd
@@ -36,11 +36,12 @@ fcred.df <- fread(methA.dir %&%"null_results/null_results_func-cred-sets.txt")
 keep.df <- fread(proj.dir %&% "input_data/" %&% "380.locus.ID.txt")
 keep.vec <- keep.df$Locus.ID_inCREDS
 
-weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingRN.txt") %>% 
+weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled-CodingNotRN.txt") %>% 
   filter(.,Locus.ID %in% keep.vec)
-unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingRN.txt") %>% 
+unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled-CodingNotRN.txt") %>% 
   filter(.,Locus.ID %in% keep.vec)
-
+alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") %>% 
+  filter(.,Locus.ID %in% keep.vec) 
 
 ```
 
@@ -89,19 +90,26 @@ build_classify_df <- function(ppa.df){
 
 df1 <- build_classify_df(weighted.df)
 df2 <- build_classify_df(unweighted.df)
+df3 <- build_classify_df(alt.df)
 
 write.table(x=df1,file=analysis.dir%&%"classified-loci_weighted.txt",
             sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
 write.table(x=df2,file=analysis.dir%&%"classified-loci_unweighted.txt",
             sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
+write.table(x=df3,file=analysis.dir%&%"classified-loci_alternative.txt",
+            sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
 
 table(df2$assigned_20)
 table(df1$assigned_20)
+table(df3$assigned_20)
 
 table(df2$assigned_50)
 table(df1$assigned_50)
+table(df3$assigned_50)
 
 table(df2$assigned_80)
 table(df1$assigned_80)
+table(df3$assigned_80)
+
 ```
 
